Tela inicial desktop e caixa de criar quizz iniciada

--- a/index.html
+++ b/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>BuzzQuizz</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-    <h1>Gabriel Deu certo?</h1>
+    <header>
+      BuzzQuizz
+    </header>
+    <div class="tela-inicial-desktop">
+      <div class="criar-quizz">
+        <p>Você não criou nenhum quizz ainda :( </p>
+        <button onclick="renderizarTelaCriarQuizz()">Criar Quizz</button>
+      </div>
+
+      <div class="todos-os-quizzes">
+          <H1>Todos os Quizzes</H1>
+      </div>
+    </div>
 </body>
 </html>
