Início da implementação da tela de criação de quizz

--- a/index.html
+++ b/index.html
@@ -24,5 +24,30 @@
           <H1>Todos os Quizzes</H1>
       </div>
     </div>
+    <div class="infoBasicaDoQuizz">
+      <div class="orientacoesDePreenchimento">Comece pelo começo</div>
+      <div class="conteudoParaPreencher">
+        <input class="inputTituloDoQuizz"></input>
+        <input class="inputEnderecoDaImagem"></input>
+        <input class="inputQuantidadeDePerguntas"></input>
+        <input class="inputQuantidadeDeNiveis"></input>
+      </div>
+      <div class="botaoParaProsseguir"></div>
+    </div>
+    <div class="perguntasDoQuizz esconde">
+      <div class="orientacoesDePreenchimento"></div>
+      <div class="conteudoParaPreencher"></div>
+      <div class="botaoParaProsseguir"></div>
+    </div>
+    <div class="niveisDoQuizz esconde">
+      <div class="orientacoesDePreenchimento"></div>
+      <div class="conteudoParaPreencher"></div>
+      <div class="botaoParaProsseguir"></div>
+    </div>
+    <div class="sucessoDoQuizz esconde">
+      <div class="orientacoesDePreenchimento"></div>
+      <div class="conteudoParaPreencher"></div>
+      <div class="botaoParaProsseguir"></div>
+    </div>
 </body>
 </html>
