Layout da primeira tela de criação de quizz finalizada

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
     <div class="infoBasicaDoQuizz">
       <div class="orientacoesDePreenchimento">Comece pelo começo</div>
       <div class="conteudoParaPreencher">
-        <input class="inputTituloDoQuizz"></input>
-        <input class="inputEnderecoDaImagem"></input>
-        <input class="inputQuantidadeDePerguntas"></input>
-        <input class="inputQuantidadeDeNiveis"></input>
+        <input class="inputTituloDoQuizz caixasDeInput" placeholder="Titulo do quizz"></input>
+        <input class="inputEnderecoDaImagem caixasDeInput" placeholder="URL da imagem do quizz"></input>
+        <input class="inputQuantidadeDePerguntas caixasDeInput" placeholder="Quantidade de perguntas do quizz"></input>
+        <input class="inputQuantidadeDeNiveis caixasDeInput" placeholder="Quantidade de niveis do quizz"></input>
       </div>
-      <div class="botaoParaProsseguir"></div>
+      <div class="botaoParaProsseguir">Prosseguir para perguntas</div>
     </div>
     <div class="perguntasDoQuizz esconde">
       <div class="orientacoesDePreenchimento"></div>
