--- a/index.html
+++ b/index.html
@@ -92,19 +92,76 @@
         <input class="input-titulo-do-quizz caixa-de-input" placeholder="URL da imagem 2"></input>
         <input class="input-titulo-do-quizz caixa-de-input" placeholder="Resposta incorreta 3"></input>
         <input class="input-titulo-do-quizz caixa-de-input" placeholder="URL da imagem 3"></input>
-        <ion-icon name="document-outline" onclick="estenderPerguntas(this)"></ion-icon>
+        <ion-icon name="document-outline" onclick="estenderPergunta(this)"></ion-icon>
+      </div>
+      <div class="conteudo-para-preencher colapsed" >
+        <p>Pergunta 2</p>
+        <input class="input-titulo-do-quizz caixa-de-input" placeholder="Titulo da pergunta"></input>
+        <input class="input-titulo-do-quizz caixa-de-input" placeholder="Cor de fundo da pergunta"></input>
+        <p>Resposta correta</p>
+        <input class="input-titulo-do-quizz caixa-de-input" placeholder="Resposta correta"></input>
+        <input class="input-titulo-do-quizz caixa-de-input" placeholder="URL da imagem"></input>
+        <p>Respostas incorretas</p>
+        <input class="input-titulo-do-quizz caixa-de-input" placeholder="Resposta incorreta 1"></input>
+        <input class="input-titulo-do-quizz caixa-de-input" placeholder="URL da imagem 1"></input>
+        <input class="input-titulo-do-quizz caixa-de-input" placeholder="Resposta incorreta 2"></input>
+        <input class="input-titulo-do-quizz caixa-de-input" placeholder="URL da imagem 2"></input>
+        <input class="input-titulo-do-quizz caixa-de-input" placeholder="Resposta incorreta 3"></input>
+        <input class="input-titulo-do-quizz caixa-de-input" placeholder="URL da imagem 3"></input>
+        <ion-icon name="document-outline" onclick="estenderPergunta(this)"></ion-icon>
+      </div>
+      <div class="conteudo-para-preencher colapsed" >
+        <p>Pergunta 3</p>
+        <input class="input-titulo-do-quizz caixa-de-input" placeholder="Titulo da pergunta"></input>
+        <input class="input-titulo-do-quizz caixa-de-input" placeholder="Cor de fundo da pergunta"></input>
+        <p>Resposta correta</p>
+        <input class="input-titulo-do-quizz caixa-de-input" placeholder="Resposta correta"></input>
+        <input class="input-titulo-do-quizz caixa-de-input" placeholder="URL da imagem"></input>
+        <p>Respostas incorretas</p>
+        <input class="input-titulo-do-quizz caixa-de-input" placeholder="Resposta incorreta 1"></input>
+        <input class="input-titulo-do-quizz caixa-de-input" placeholder="URL da imagem 1"></input>
+        <input class="input-titulo-do-quizz caixa-de-input" placeholder="Resposta incorreta 2"></input>
+        <input class="input-titulo-do-quizz caixa-de-input" placeholder="URL da imagem 2"></input>
+        <input class="input-titulo-do-quizz caixa-de-input" placeholder="Resposta incorreta 3"></input>
+        <input class="input-titulo-do-quizz caixa-de-input" placeholder="URL da imagem 3"></input>
+        <ion-icon name="document-outline" onclick="estenderPergunta(this)"></ion-icon>
       </div>
       <div class="botao-para-prosseguir">Prosseguir para criar níveis</div>
     </div>
     <div class="niveis-do-quizz">
       <div class="orientacoes-de-preenchimento">Agora, decida os níveis</div>
-      <div class="conteudo-para-preencher"></div>
-      <div class="botao-para-prosseguir"></div>
+      <div class="conteudo-para-preencher colapsed" >
+        <p>Nível 1</p>
+        <input class="input-titulo-do-quizz caixa-de-input" placeholder="Titulo do nível"></input>
+        <input class="input-titulo-do-quizz caixa-de-input" placeholder="% de acerto mínima"></input>
+        <input class="input-titulo-do-quizz caixa-de-input" placeholder="URL da imagem do nível"></input>
+        <input class="input-titulo-do-quizz caixa-de-input" placeholder="Descrição do nível"></input>
+        <ion-icon name="document-outline" onclick="estenderPergunta(this)"></ion-icon>
+      </div>
+      <div class="conteudo-para-preencher colapsed" >
+        <p>Nível 2</p>
+        <input class="input-titulo-do-quizz caixa-de-input" placeholder="Titulo do nível"></input>
+        <input class="input-titulo-do-quizz caixa-de-input" placeholder="% de acerto mínima"></input>
+        <input class="input-titulo-do-quizz caixa-de-input" placeholder="URL da imagem do nível"></input>
+        <input class="input-titulo-do-quizz caixa-de-input" placeholder="Descrição do nível"></input>
+        <ion-icon name="document-outline" onclick="estenderPergunta(this)"></ion-icon>
+      </div>
+      <div class="conteudo-para-preencher colapsed" >
+        <p>Nível 3</p>
+        <input class="input-titulo-do-quizz caixa-de-input" placeholder="Titulo do nível"></input>
+        <input class="input-titulo-do-quizz caixa-de-input" placeholder="% de acerto mínima"></input>
+        <input class="input-titulo-do-quizz caixa-de-input" placeholder="URL da imagem do nível"></input>
+        <input class="input-titulo-do-quizz caixa-de-input" placeholder="Descrição do nível"></input>
+        <ion-icon name="document-outline" onclick="estenderPergunta(this)"></ion-icon>
+      </div>
+      
+      <div class="botao-para-prosseguir">Finalizar quizz</div>
     </div>
     <div class="sucesso-do-quizz">
       <div class="orientacoes-de-preenchimento">Seu quizz está pronto!</div>
       <div class="conteudo-para-preencher"></div>
-      <div class="botao-para-prosseguir"></div>
+      <div class="botao-para-prosseguir">Acessar Quizz</div>
+      <p class="voltar-para-home">Voltar para home</p>
     </div>
     
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
