Envio de perguntas quase finalizado

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
     <!--CRIAÇÃO DE QUIZZ-->
 
-    <div class="info-basica-do-quizz">
+    <div class="info-basica-do-quizz esconde">
       <div class="orientacoes-de-preenchimento">Comece pelo começo</div>
       <div class="erro"></div>
       <div class="conteudo-para-preencher">
@@ -95,7 +95,7 @@
       </div>
       <div class="botao-para-prosseguir" onclick="validarDadosPg1(this)">Prosseguir para perguntas</div>
     </div>
-    <div class="perguntas-do-quizz esconde"></div>
+    <div class="perguntas-do-quizz"></div>
     <div class="niveis-do-quizz esconde"></div>
     <div class="sucesso-do-quizz esconde">
       <div class="orientacoes-de-preenchimento">Seu quizz está pronto!</div>
