Renderização da tela de quizz via javascript iniciada

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
       BuzzQuizz
     </header>
-    <div class="tela-inicial-desktop esconde ">
+    <div class="tela-inicial-desktop ">
       <div class="criar-quizz">
         <p>Você não criou nenhum quizz ainda :( </p>
         <button onclick="renderizarTelaCriarQuizz()">Criar Quizz</button>
@@ -79,7 +79,7 @@
 
     <!--CRIAÇÃO DE QUIZZ-->
 
-    <div class="info-basica-do-quizz">
+    <div class="info-basica-do-quizz esconde">
       <div class="orientacoes-de-preenchimento">Comece pelo começo</div>
       <div class="erro"></div>
       <div class="conteudo-para-preencher">
