Consegui fazer um pouco da edicao e delete, mas deve estar cheio de bugs

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <div class="tela-inicial-desktop">
       <div class="criar-quizz">
         <p>Você não criou nenhum quizz ainda :( </p>
-        <button onclick="renderizarTelaCriarQuizz(this)">Criar Quizz</button>
+        <button onclick="renderizarTelaCriarQuizz()">Criar Quizz</button>
       </div>
       <div class="quizzes-do-usuario esconde">
         <div class="adicionar-quizz">
           <H1>Seus Quizzes</H1>
-          <ion-icon name="add-circle" onclick="renderizarTelaCriarQuizz(this)"></ion-icon>
+          <ion-icon name="add-circle" onclick="renderizarTelaCriarQuizz()"></ion-icon>
         </div>
         <ul class="lista-quizzes">
         </ul>
