implementação da tela de loading

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <header>
       BuzzQuizz
     </header>
-    <div class="tela-inicial-desktop">
+    <div class="loading-geral esconde"><img src="gif/loading.gif" alt="Loading gif"></div>
+    <div class="tela-inicial-desktop esconde">
       <div class="criar-quizz">
         <p>Você não criou nenhum quizz ainda :( </p>
         <button onclick="renderizarTelaCriarQuizz()">Criar Quizz</button>
